--- a/InspectorJournal/Views/ViolationTypes/Create.cshtml
+++ b/InspectorJournal/Views/ViolationTypes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model InspectorJournal.DataLayer.Models.ViolationType
+﻿@model ViolationType
 
 @{
     ViewData["Title"] = "Создать";
@@ -8,51 +8,51 @@
 <h1 class="text-center">@ViewData["Title"]</h1>
 
 <h4 class="text-center">Создание нового типа нарушения</h4>
-<hr class="my-4" />
+<hr class="my-4"/>
 
-    <div class="card shadow-lg">
-        <div class="card-body">
-            
-            <form asp-action="Create">
-                <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
+<div class="card shadow-lg">
+    <div class="card-body">
 
-                <!-- Поле для названия нарушения -->
-                <div class="form-group mb-3">
-                    <label asp-for="Name" class="form-label">Название нарушения</label>
-                    <input asp-for="Name" class="form-control" placeholder="Введите название нарушения" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
-                </div>
+        <form asp-action="Create">
+            <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
-                <!-- Поле для штрафа -->
-                <div class="form-group mb-3">
-                    <label asp-for="PenaltyAmount" class="form-label">Штраф (руб.)</label>
-                    <input asp-for="PenaltyAmount" class="form-control " placeholder="Введите сумму штрафа" />
-                    <span asp-validation-for="PenaltyAmount" class="text-danger"></span>
-                </div>
+            <!-- Поле для названия нарушения -->
+            <div class="form-group mb-3">
+                <label asp-for="Name" class="form-label">Название нарушения</label>
+                <input asp-for="Name" class="form-control" placeholder="Введите название нарушения"/>
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
 
-                <!-- Поле для количества дней на исправление -->
-                <div class="form-group mb-3">
-                    <label asp-for="CorrectionPeriodDays" class="form-label">Срок исправления (дни)</label>
-                    <input asp-for="CorrectionPeriodDays" class="form-control" placeholder="Введите количество дней" />
-                    <span asp-validation-for="CorrectionPeriodDays" class="text-danger"></span>
-                </div>
+            <!-- Поле для штрафа -->
+            <div class="form-group mb-3">
+                <label asp-for="PenaltyAmount" class="form-label">Штраф (руб.)</label>
+                <input asp-for="PenaltyAmount" class="form-control " placeholder="Введите сумму штрафа"/>
+                <span asp-validation-for="PenaltyAmount" class="text-danger"></span>
+            </div>
 
-                <!-- Кнопка создания -->
-                <div class="form-group text-center">
-                    <button type="submit" class="btn btn-success btn-block">
-                        <i class="bi bi-check-circle"></i> Создать
-                    </button>
-                </div>
-            </form>
-        </div>
+            <!-- Поле для количества дней на исправление -->
+            <div class="form-group mb-3">
+                <label asp-for="CorrectionPeriodDays" class="form-label">Срок исправления (дни)</label>
+                <input asp-for="CorrectionPeriodDays" class="form-control" placeholder="Введите количество дней"/>
+                <span asp-validation-for="CorrectionPeriodDays" class="text-danger"></span>
+            </div>
+
+            <!-- Кнопка создания -->
+            <div class="form-group text-center">
+                <button type="submit" class="btn btn-success btn-block">
+                    <i class="bi bi-check-circle"></i> Создать
+                </button>
+            </div>
+        </form>
     </div>
+</div>
 
-    <!-- Ссылка на возвращение к списку -->
-    <div class="mt-3 text-center">
-        <a asp-action="Index" class="btn btn-outline-primary">
-            <i class="bi bi-arrow-left-circle"></i> Вернуться к списку
-        </a>
-    </div>
+<!-- Ссылка на возвращение к списку -->
+<div class="mt-3 text-center">
+    <a asp-action="Index" class="btn btn-outline-primary">
+        <i class="bi bi-arrow-left-circle"></i> Вернуться к списку
+    </a>
+</div>
 </div>
 
 @section Scripts {
