--- a/InspectorJournal/Views/ViolationTypes/Details.cshtml
+++ b/InspectorJournal/Views/ViolationTypes/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model InspectorJournal.DataLayer.Models.ViolationType
+﻿@model ViolationType
 
 @{
     ViewData["Title"] = "Детали";
@@ -11,7 +11,7 @@
     <div class="card shadow-sm">
         <div class="card-body">
             <h4 class="mb-4">Информация о типе нарушения</h4>
-            <hr />
+            <hr/>
             <dl class="row">
                 <dt class="col-sm-3">
                     @Html.DisplayNameFor(model => model.Name)
