--- a/InspectorJournal/Views/Enterprises/Delete.cshtml
+++ b/InspectorJournal/Views/Enterprises/Delete.cshtml
@@ -1,70 +1,70 @@
-﻿@model InspectorJournal.DataLayer.Models.Enterprise
+﻿@model Enterprise
 
 @{
     ViewData["Title"] = "Удалить";
 }
 
 <div class="container mt-5">
-<h2 class="mb-4 text-center text-danger">Удалить</h2>
-<h4 class="mb-4 text-center">Вы уверены, что хотите удалить эту запись?</h4>
+    <h2 class="mb-4 text-center text-danger">Удалить</h2>
+    <h4 class="mb-4 text-center">Вы уверены, что хотите удалить эту запись?</h4>
 
-<div class="card shadow-lg">
-<div class="card-body">
-    <h5 class="text-secondary">Информация о предприятии</h5>
-    <hr />
+    <div class="card shadow-lg">
+        <div class="card-body">
+            <h5 class="text-secondary">Информация о предприятии</h5>
+            <hr/>
 
-    <dl class="row">
-        <dt class="col-sm-3">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+            <dl class="row">
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
 
-        <dt class="col-sm-3">
-            @Html.DisplayNameFor(model => model.OwnershipType)
-        </dt>
-        <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.OwnershipType)
-        </dd>
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.OwnershipType)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.OwnershipType)
+                </dd>
 
-        <dt class="col-sm-3">
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-        <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.Address)
-        </dd>
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.Address)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.Address)
+                </dd>
 
-        <dt class="col-sm-3">
-            @Html.DisplayNameFor(model => model.DirectorName)
-        </dt>
-        <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.DirectorName)
-        </dd>
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.DirectorName)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.DirectorName)
+                </dd>
 
-        <dt class="col-sm-3">
-            @Html.DisplayNameFor(model => model.DirectorPhone)
-        </dt>
-        <dd class="col-sm-9">
-            @Html.DisplayFor(model => model.DirectorPhone)
-        </dd>
-    </dl>
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.DirectorPhone)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.DirectorPhone)
+                </dd>
+            </dl>
 
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="EnterpriseId" />
-        <div class="text-center">
-            <button type="submit" class="btn btn-danger btn-lg">
-                <i class="bi bi-trash"></i> Удалить
-            </button>
-            <span class="mx-2">|</span>
-            <a asp-action="Index" class="btn btn-outline-primary">
-                <i class="bi bi-arrow-left-circle"></i> Вернуться к списку
-            </a>
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="EnterpriseId"/>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-danger btn-lg">
+                        <i class="bi bi-trash"></i> Удалить
+                    </button>
+                    <span class="mx-2">|</span>
+                    <a asp-action="Index" class="btn btn-outline-primary">
+                        <i class="bi bi-arrow-left-circle"></i> Вернуться к списку
+                    </a>
+                </div>
+            </form>
         </div>
-    </form>
     </div>
 </div>
-    </div>
 
 @section Scripts {
     @{
