--- a/InspectorJournal/Views/Enterprises/Edit.cshtml
+++ b/InspectorJournal/Views/Enterprises/Edit.cshtml
@@ -1,62 +1,63 @@
-﻿@model InspectorJournal.DataLayer.Models.Enterprise
+﻿@model Enterprise
 
 @{
     ViewData["Title"] = "Редактирование";
 }
 <div class="container mt-5">
-<h2 class="mb-4 text-center">Редактировать предприятие</h2>
-<div class="card shadow-lg">
-<div class="card-body">
+    <h2 class="mb-4 text-center">Редактировать предприятие</h2>
+    <div class="card shadow-lg">
+        <div class="card-body">
 
-    <form asp-action="Edit">
-        <div asp-validation-summary="ModelOnly" class="text-danger mb-4"></div>
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger mb-4"></div>
 
-        <input type="hidden" asp-for="EnterpriseId" />
+                <input type="hidden" asp-for="EnterpriseId"/>
 
-        <div class="form-group mb-3">
-            <label asp-for="Name" class="control-label"></label>
-            <input asp-for="Name" class="form-control" placeholder="Название предприятия" />
-            <span asp-validation-for="Name" class="text-danger"></span>
+                <div class="form-group mb-3">
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" placeholder="Название предприятия"/>
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+
+                <div class="form-group mb-3">
+                    <label asp-for="OwnershipType" class="control-label"></label>
+                    <input asp-for="OwnershipType" class="form-control" placeholder="Тип собственности"/>
+                    <span asp-validation-for="OwnershipType" class="text-danger"></span>
+                </div>
+
+                <div class="form-group mb-3">
+                    <label asp-for="Address" class="control-label"></label>
+                    <input asp-for="Address" class="form-control" placeholder="Адрес"/>
+                    <span asp-validation-for="Address" class="text-danger"></span>
+                </div>
+
+                <div class="form-group mb-3">
+                    <label asp-for="DirectorName" class="control-label"></label>
+                    <input asp-for="DirectorName" class="form-control" placeholder="ФИО директора"/>
+                    <span asp-validation-for="DirectorName" class="text-danger"></span>
+                </div>
+
+                <div class="form-group mb-3">
+                    <label asp-for="DirectorPhone" class="control-label"></label>
+                    <input asp-for="DirectorPhone" class="form-control" placeholder="Телефон директора"/>
+                    <span asp-validation-for="DirectorPhone" class="text-danger"></span>
+                </div>
+
+                <div class="d-flex justify-content-between">
+                    <button type="submit" class="btn btn-success btn-lg">
+                        <i class="bi bi-save"></i> Сохранить
+                    </button>
+
+                    <a asp-action="Index" class="btn btn-outline-primary">
+                        <i class="bi bi-arrow-left-circle"></i> Вернуться к списку
+                    </a>
+
+                </div>
+            </form>
         </div>
-
-        <div class="form-group mb-3">
-            <label asp-for="OwnershipType" class="control-label"></label>
-            <input asp-for="OwnershipType" class="form-control" placeholder="Тип собственности" />
-            <span asp-validation-for="OwnershipType" class="text-danger"></span>
-        </div>
-
-        <div class="form-group mb-3">
-            <label asp-for="Address" class="control-label"></label>
-            <input asp-for="Address" class="form-control" placeholder="Адрес" />
-            <span asp-validation-for="Address" class="text-danger"></span>
-        </div>
-
-        <div class="form-group mb-3">
-            <label asp-for="DirectorName" class="control-label"></label>
-            <input asp-for="DirectorName" class="form-control" placeholder="ФИО директора" />
-            <span asp-validation-for="DirectorName" class="text-danger"></span>
-        </div>
-
-        <div class="form-group mb-3">
-            <label asp-for="DirectorPhone" class="control-label"></label>
-            <input asp-for="DirectorPhone" class="form-control" placeholder="Телефон директора" />
-            <span asp-validation-for="DirectorPhone" class="text-danger"></span>
-        </div>
-
-        <div class="d-flex justify-content-between">
-            <button type="submit" class="btn btn-success btn-lg">
-                <i class="bi bi-save"></i> Сохранить
-            </button>
-
-            <a asp-action="Index" class="btn btn-outline-primary">
-                <i class="bi bi-arrow-left-circle"></i> Вернуться к списку
-            </a>
-
-        </div>
-    </form>
-</div>
     </div>
 </div>
+
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
