--- a/InspectorJournal/Views/Enterprises/Index.cshtml
+++ b/InspectorJournal/Views/Enterprises/Index.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewData["Title"] = "Предприятия";
     var user = Context.User;
-    string EnterpriseName = Model.Name ?? "";
-    string EnterpriseAddress = Model.Address ?? "";
+    var EnterpriseName = Model.Name ?? "";
+    var EnterpriseAddress = Model.Address ?? "";
 }
 
 <div class="container mt-4">
@@ -53,41 +53,41 @@ mr-3">
     <!-- Таблица предприятий -->
     <table class="table table-striped table-bordered table-hover inspections-table">
         <thead class="table-dark">
-            <tr>
-                <th>
-                    <a asp-action="Index"
-                       asp-route-sortOrder="@Model.SortViewModel.EnterpriseNameSort"
-                       asp-route-EnterpriseName="@EnterpriseName"
-                       asp-route-EnterpriseAddress="@EnterpriseAddress">
-                        @Html.DisplayNameFor(model => model.Name)
-                        @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.EnterpriseNameAsc))
-                    </a>
-                </th>
-                <th>@Html.DisplayNameFor(model => model.OwnershipType)</th>
-                <th>@Html.DisplayNameFor(model => model.Address)</th>
-                <th>@Html.DisplayNameFor(model => model.DirectorName)</th>
-                <th>@Html.DisplayNameFor(model => model.DirectorPhone)</th>
-                @if (user.IsInRole("Admin"))
-                {
-                    <th>Действие</th>
-                }
-            </tr>
+        <tr>
+            <th>
+                <a asp-action="Index"
+                   asp-route-sortOrder="@Model.SortViewModel.EnterpriseNameSort"
+                   asp-route-EnterpriseName="@EnterpriseName"
+                   asp-route-EnterpriseAddress="@EnterpriseAddress">
+                    @Html.DisplayNameFor(model => model.Name)
+                    @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.EnterpriseNameAsc))
+                </a>
+            </th>
+            <th>@Html.DisplayNameFor(model => model.OwnershipType)</th>
+            <th>@Html.DisplayNameFor(model => model.Address)</th>
+            <th>@Html.DisplayNameFor(model => model.DirectorName)</th>
+            <th>@Html.DisplayNameFor(model => model.DirectorPhone)</th>
+            @if (user.IsInRole("Admin"))
+            {
+                <th>Действие</th>
+            }
+        </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.Enterprises)
-            {
-                <tr>
-                    <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                    <td>@Html.DisplayFor(modelItem => item.OwnershipType)</td>
-                    <td>@Html.DisplayFor(modelItem => item.Address)</td>
-                    <td>@Html.DisplayFor(modelItem => item.DirectorName)</td>
-                    <td>@Html.DisplayFor(modelItem => item.DirectorPhone)</td>
-                    @if (user.IsInRole("Admin"))
-                    {
-                        <admin-actions item-id="@item.EnterpriseId" id-name="EnterpriseId"></admin-actions>
-                    }
-                </tr>
-            }
+        @foreach (var item in Model.Enterprises)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                <td>@Html.DisplayFor(modelItem => item.OwnershipType)</td>
+                <td>@Html.DisplayFor(modelItem => item.Address)</td>
+                <td>@Html.DisplayFor(modelItem => item.DirectorName)</td>
+                <td>@Html.DisplayFor(modelItem => item.DirectorPhone)</td>
+                @if (user.IsInRole("Admin"))
+                {
+                    <admin-actions item-id="@item.EnterpriseId" id-name="EnterpriseId"></admin-actions>
+                }
+            </tr>
+        }
         </tbody>
     </table>
 
@@ -95,5 +95,6 @@ mr-3">
     <page-link page-model="Model.PageViewModel" page-action="Index"
                page-url-EnterpriseName="@EnterpriseName"
                page-url-EnterpriseAddress="@EnterpriseAddress"
-               page-url-sortOrder="@(Model.SortViewModel.CurrentState)"></page-link>
+               page-url-sortOrder="@(Model.SortViewModel.CurrentState)">
+    </page-link>
 </div>
