--- a/InspectorJournal/Views/Inspections/Index.cshtml
+++ b/InspectorJournal/Views/Inspections/Index.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Проверки";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var user = Context.User;
-    string EnterpriseName = Model.FilterInspectionViewModel?.Enterprise ?? "";
-    string ViolationType = Model.FilterInspectionViewModel?.ViolationType ?? "";
-    decimal? PenaltyAmount = Model.FilterInspectionViewModel?.PenaltyAmount;
+    var EnterpriseName = Model.FilterInspectionViewModel?.Enterprise ?? "";
+    var ViolationType = Model.FilterInspectionViewModel?.ViolationType ?? "";
+    var PenaltyAmount = Model.FilterInspectionViewModel?.PenaltyAmount;
 }
 
 <div class="container mt-4 @(user.IsInRole("Admin") ? "div-inspections" : "")">
@@ -59,81 +59,81 @@
     <!-- Таблица проверок -->
     <table class="table table-striped table-bordered table-hover inspections-table">
         <thead class="table-dark">
-            <tr>
-                <th>
-                    <a asp-action="Index" asp-route-sortOrder="@Model.SortViewModel.InspectorNameSort"
-                       asp-route-Enterprise="@EnterpriseName"
-                       asp-route-ViolationType="@ViolationType"
-                       asp-route-PenaltyAmount="@PenaltyAmount"
-                       class="sort-link">
-                        @Html.DisplayNameFor(model => model.FilterInspectionViewModel.Inspector)
-                        @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.InspectorNameAsc))
-                    </a>
-                </th>
-                <th>
-                    <a asp-action="Index" asp-route-sortOrder="@Model.SortViewModel.EnterpriseNameSort"
-                       asp-route-Enterprise="@EnterpriseName"
-                       asp-route-ViolationType="@ViolationType"
-                       asp-route-PenaltyAmount="@PenaltyAmount"
-                       class="sort-link">
-                        @Html.DisplayNameFor(model => model.FilterInspectionViewModel.Enterprise)
-                        @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.EnterpriseNameAsc))
-                    </a>
-                </th>
-                <th>Дата Проверки</th>
-                <th>Номер Протокола</th>
-                <th>
-                    <a asp-action="Index" asp-route-sortOrder="@Model.SortViewModel.ViolationTypeSort"
-                       asp-route-Enterprise="@EnterpriseName"
-                       asp-route-ViolationType="@ViolationType"
-                       asp-route-PenaltyAmount="@PenaltyAmount"
-                       class="sort-link">
-                        @Html.DisplayNameFor(model => model.FilterInspectionViewModel.ViolationType)
-                        @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.ViolationTypeAsc))
-                    </a>
-                </th>
-                <th>Ответственный</th>
-                <th>
-                    <a asp-action="Index" asp-route-sortOrder="@Model.SortViewModel.PenaltyAmountSort"
-                       asp-route-Enterprise="@EnterpriseName"
-                       asp-route-ViolationType="@ViolationType"
-                       asp-route-PenaltyAmount="@PenaltyAmount"
-                       class="sort-link">
-                        @Html.DisplayNameFor(model => model.FilterInspectionViewModel.PenaltyAmount)
-                        @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.PenaltyAmountAsc))
-                    </a>
-                </th>
-                <th>@Html.DisplayNameFor(model => model.FilterInspectionViewModel.PaymentDeadline)</th>
-                <th>@Html.DisplayNameFor(model => model.FilterInspectionViewModel.CorrectionDeadline)</th>
-                <th>@Html.DisplayNameFor(model => model.FilterInspectionViewModel.PaymentStatus)</th>
-                <th>@Html.DisplayNameFor(model => model.FilterInspectionViewModel.CorrectionStatus)</th>
-                @if (user.IsInRole("Admin"))
-                {
-                    <th>Действие</th>
-                }
-            </tr>
+        <tr>
+            <th>
+                <a asp-action="Index" asp-route-sortOrder="@Model.SortViewModel.InspectorNameSort"
+                   asp-route-Enterprise="@EnterpriseName"
+                   asp-route-ViolationType="@ViolationType"
+                   asp-route-PenaltyAmount="@PenaltyAmount"
+                   class="sort-link">
+                    @Html.DisplayNameFor(model => model.FilterInspectionViewModel.Inspector)
+                    @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.InspectorNameAsc))
+                </a>
+            </th>
+            <th>
+                <a asp-action="Index" asp-route-sortOrder="@Model.SortViewModel.EnterpriseNameSort"
+                   asp-route-Enterprise="@EnterpriseName"
+                   asp-route-ViolationType="@ViolationType"
+                   asp-route-PenaltyAmount="@PenaltyAmount"
+                   class="sort-link">
+                    @Html.DisplayNameFor(model => model.FilterInspectionViewModel.Enterprise)
+                    @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.EnterpriseNameAsc))
+                </a>
+            </th>
+            <th>Дата Проверки</th>
+            <th>Номер Протокола</th>
+            <th>
+                <a asp-action="Index" asp-route-sortOrder="@Model.SortViewModel.ViolationTypeSort"
+                   asp-route-Enterprise="@EnterpriseName"
+                   asp-route-ViolationType="@ViolationType"
+                   asp-route-PenaltyAmount="@PenaltyAmount"
+                   class="sort-link">
+                    @Html.DisplayNameFor(model => model.FilterInspectionViewModel.ViolationType)
+                    @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.ViolationTypeAsc))
+                </a>
+            </th>
+            <th>Ответственный</th>
+            <th>
+                <a asp-action="Index" asp-route-sortOrder="@Model.SortViewModel.PenaltyAmountSort"
+                   asp-route-Enterprise="@EnterpriseName"
+                   asp-route-ViolationType="@ViolationType"
+                   asp-route-PenaltyAmount="@PenaltyAmount"
+                   class="sort-link">
+                    @Html.DisplayNameFor(model => model.FilterInspectionViewModel.PenaltyAmount)
+                    @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.PenaltyAmountAsc))
+                </a>
+            </th>
+            <th>@Html.DisplayNameFor(model => model.FilterInspectionViewModel.PaymentDeadline)</th>
+            <th>@Html.DisplayNameFor(model => model.FilterInspectionViewModel.CorrectionDeadline)</th>
+            <th>@Html.DisplayNameFor(model => model.FilterInspectionViewModel.PaymentStatus)</th>
+            <th>@Html.DisplayNameFor(model => model.FilterInspectionViewModel.CorrectionStatus)</th>
+            @if (user.IsInRole("Admin"))
+            {
+                <th>Действие</th>
+            }
+        </tr>
         </thead>
         <tbody>
-            @foreach (var inspection in Model.Inspections)
-            {
-                <tr>
-                    <td>@inspection.Inspector.FullName</td>
-                    <td>@inspection.Enterprise.Name</td>
-                    <td>@inspection.InspectionDate.ToShortDateString()</td>
-                    <td>@inspection.ProtocolNumber</td>
-                    <td>@inspection.ViolationType.Name</td>
-                    <td>@inspection.ResponsiblePerson</td>
-                    <td>@inspection.PenaltyAmount</td>
-                    <td>@inspection.PaymentDeadline.ToShortDateString()</td>
-                    <td>@inspection.CorrectionDeadline.ToShortDateString()</td>
-                    <td>@inspection.PaymentStatus</td>
-                    <td>@inspection.CorrectionStatus</td>
-                    @if (user.IsInRole("Admin"))
-                    {
-                        <admin-actions item-id="@inspection.InspectionId" id-name="inspectionId"></admin-actions>
-                    }
-                </tr>
-            }
+        @foreach (var inspection in Model.Inspections)
+        {
+            <tr>
+                <td>@inspection.Inspector.FullName</td>
+                <td>@inspection.Enterprise.Name</td>
+                <td>@inspection.InspectionDate.ToShortDateString()</td>
+                <td>@inspection.ProtocolNumber</td>
+                <td>@inspection.ViolationType.Name</td>
+                <td>@inspection.ResponsiblePerson</td>
+                <td>@inspection.PenaltyAmount</td>
+                <td>@inspection.PaymentDeadline.ToShortDateString()</td>
+                <td>@inspection.CorrectionDeadline.ToShortDateString()</td>
+                <td>@inspection.PaymentStatus</td>
+                <td>@inspection.CorrectionStatus</td>
+                @if (user.IsInRole("Admin"))
+                {
+                    <admin-actions item-id="@inspection.InspectionId" id-name="inspectionId"></admin-actions>
+                }
+            </tr>
+        }
         </tbody>
     </table>
 </div>
@@ -142,4 +142,5 @@
            page-url-Enterprise="@EnterpriseName"
            page-url-ViolationType="@ViolationType"
            page-url-PenaltyAmount="@PenaltyAmount"
-           page-url-sortOrder="@(Model.SortViewModel.CurrentState)"></page-link>
+           page-url-sortOrder="@(Model.SortViewModel.CurrentState)">
+</page-link>
