--- a/InspectorJournal/Views/Inspectors/Delete.cshtml
+++ b/InspectorJournal/Views/Inspectors/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model InspectorJournal.DataLayer.Models.Inspector
+﻿@model Inspector
 
 @{
     ViewData["Title"] = "Удалить";
@@ -12,7 +12,8 @@
     <div class="card shadow-lg">
         <div class="card-body">
             <h5 class="text-secondary">Информация об инспекторах</h5>
-            <hr />            <dl class="row">
+            <hr/>
+            <dl class="row">
                 <dt class="col-sm-3">
                     @Html.DisplayNameFor(model => model.FullName)
                 </dt>
@@ -29,7 +30,7 @@
             </dl>
 
             <form asp-action="Delete">
-                <input type="hidden" asp-for="InspectorId" />
+                <input type="hidden" asp-for="InspectorId"/>
                 <div class="text-center">
                     <button type="submit" class="btn btn-danger btn-lg">
                         <i class="bi bi-trash"></i> Удалить
