--- a/InspectorJournal/Views/Inspectors/Edit.cshtml
+++ b/InspectorJournal/Views/Inspectors/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model InspectorJournal.DataLayer.Models.Inspector
+﻿@model Inspector
 
 @{
     ViewData["Title"] = "Редактирование";
@@ -6,23 +6,23 @@
 }
 
 <div class="container mt-5">
-<h2 class="mb-4 text-center">Редактировать  инспектора</h2>
-<div class="card shadow-lg">
-    <div class="card-body">
+    <h2 class="mb-4 text-center">Редактировать инспектора</h2>
+    <div class="card shadow-lg">
+        <div class="card-body">
 
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="InspectorId" />
+                <input type="hidden" asp-for="InspectorId"/>
 
                 <div class="form-group mb-3">
                     <label asp-for="FullName" class="control-label">Полное имя</label>
-                    <input asp-for="FullName" class="form-control" />
+                    <input asp-for="FullName" class="form-control"/>
                     <span asp-validation-for="FullName" class="text-danger"></span>
                 </div>
 
                 <div class="form-group mb-3">
                     <label asp-for="Department" class="control-label">Отдел</label>
-                    <input asp-for="Department" class="form-control" />
+                    <input asp-for="Department" class="form-control"/>
                     <span asp-validation-for="Department" class="text-danger"></span>
                 </div>
 
@@ -40,8 +40,8 @@
         </div>
     </div>
 </div>
-    
+
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
