--- a/InspectorJournal/Views/Inspectors/Index.cshtml
+++ b/InspectorJournal/Views/Inspectors/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Инспектора";
     var user = Context.User;
-    string InspectorName = Model.FullName ?? "";
+    var InspectorName = Model.FullName ?? "";
 }
 
 <div class="container mt-4">
@@ -46,35 +46,35 @@
     <!-- Таблица инспекторов -->
     <table class="table table-striped table-bordered table-hover inspections-table">
         <thead class="table-dark">
-            <tr>
-                <th>
-                    <a asp-action="Index"
-                       asp-route-sortOrder="@Model.SortViewModel.InspectorNameSort"
-                       asp-route-InspectorName="@InspectorName"
-                       class="sort-link">
-                        @Html.DisplayNameFor(model => model.FullName)
-                        @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.InspectorNameAsc))
-                    </a>
-                </th>
-                <th>@Html.DisplayNameFor(model => model.Department)</th>
-                @if (user.IsInRole("Admin"))
-                {
-                    <th>Действия</th>
-                }
-            </tr>
+        <tr>
+            <th>
+                <a asp-action="Index"
+                   asp-route-sortOrder="@Model.SortViewModel.InspectorNameSort"
+                   asp-route-InspectorName="@InspectorName"
+                   class="sort-link">
+                    @Html.DisplayNameFor(model => model.FullName)
+                    @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.InspectorNameAsc))
+                </a>
+            </th>
+            <th>@Html.DisplayNameFor(model => model.Department)</th>
+            @if (user.IsInRole("Admin"))
+            {
+                <th>Действия</th>
+            }
+        </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.Inspectors)
-            {
-                <tr>
-                    <td>@Html.DisplayFor(modelItem => item.FullName)</td>
-                    <td>@Html.DisplayFor(modelItem => item.Department)</td>
-                    @if (user.IsInRole("Admin"))
-                    {
-                        <admin-actions item-id="@item.InspectorId" id-name="InspectorId"></admin-actions>
-                    }
-                </tr>
-            }
+        @foreach (var item in Model.Inspectors)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.FullName)</td>
+                <td>@Html.DisplayFor(modelItem => item.Department)</td>
+                @if (user.IsInRole("Admin"))
+                {
+                    <admin-actions item-id="@item.InspectorId" id-name="InspectorId"></admin-actions>
+                }
+            </tr>
+        }
         </tbody>
     </table>
 
