--- a/InspectorJournal/Views/ViolationTypes/Delete.cshtml
+++ b/InspectorJournal/Views/ViolationTypes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model InspectorJournal.DataLayer.Models.ViolationType
+﻿@model ViolationType
 
 @{
     ViewData["Title"] = "Удалить";
@@ -12,7 +12,7 @@
     <div class="card shadow-lg">
         <div class="card-body">
             <h5 class="text-secondary">Информация о типе нарушения</h5>
-            <hr />
+            <hr/>
 
             <dl class="row">
                 <dt class="col-sm-3">
@@ -38,7 +38,7 @@
             </dl>
 
             <form asp-action="Delete">
-                <input type="hidden" asp-for="ViolationTypeId" />
+                <input type="hidden" asp-for="ViolationTypeId"/>
                 <div class="text-center">
                     <button type="submit" class="btn btn-danger btn-lg">
                         <i class="bi bi-trash"></i> Удалить
