--- a/InspectorJournal/Views/ViolationTypes/Index.cshtml
+++ b/InspectorJournal/Views/ViolationTypes/Index.cshtml
@@ -3,23 +3,23 @@
 @{
     ViewData["Title"] = "Нарушения";
     var user = Context.User;
-    string ViolationTypeName = Model.Name ?? "";
+    var ViolationTypeName = Model.Name ?? "";
 }
 
 <div class="container mt-4">
     <!-- Заголовок -->
     <h2 class="mb-4 text-center">Список типов нарушений</h2>
-<!-- Блок кнопок -->
-<div class="d-flex mb-3 justify-content-between align-items-center">
-    @if (user.IsInRole("Admin"))
-    {
-        <!-- Кнопка "Создать" доступна только админам -->
-        <a class="btn btn-outline-success" asp-action="Create">Создать</a>
-        <span class="mx-2">|</span>
-    }
-    <!-- Кнопка "Поиск" для всех пользователей -->
-    <button id="searchToggleBtn" class="btn btn-outline-primary me-auto">Поиск</button>
-</div>
+    <!-- Блок кнопок -->
+    <div class="d-flex mb-3 justify-content-between align-items-center">
+        @if (user.IsInRole("Admin"))
+        {
+            <!-- Кнопка "Создать" доступна только админам -->
+            <a class="btn btn-outline-success" asp-action="Create">Создать</a>
+            <span class="mx-2">|</span>
+        }
+        <!-- Кнопка "Поиск" для всех пользователей -->
+        <button id="searchToggleBtn" class="btn btn-outline-primary me-auto">Поиск</button>
+    </div>
 
     <!-- Контейнер с формой фильтрации -->
     <div id="searchForm" class="d-none mt-3">
@@ -45,37 +45,37 @@
     <!-- Таблица типов нарушений -->
     <table class="table table-striped table-bordered table-hover inspections-table">
         <thead class="table-dark">
-            <tr>
-                <th>
-                    <a asp-action="Index"
-                       asp-route-sortOrder="@Model.SortViewModel.ViolationTypeSort"
-                       asp-route-ViolationTypeName="@ViolationTypeName"
-                       class="sort-link">
-                        @Html.DisplayNameFor(model => model.Name)
-                        @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.ViolationTypeAsc))
-                    </a>
-                </th>
-                <th>@Html.DisplayNameFor(model => model.PenaltyAmount)</th>
-                <th>@Html.DisplayNameFor(model => model.CorrectionPeriodDays)</th>
-                @if (user.IsInRole("Admin"))
-                {
-                    <th>Действия</th>
-                }
-            </tr>
+        <tr>
+            <th>
+                <a asp-action="Index"
+                   asp-route-sortOrder="@Model.SortViewModel.ViolationTypeSort"
+                   asp-route-ViolationTypeName="@ViolationTypeName"
+                   class="sort-link">
+                    @Html.DisplayNameFor(model => model.Name)
+                    @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.ViolationTypeAsc))
+                </a>
+            </th>
+            <th>@Html.DisplayNameFor(model => model.PenaltyAmount)</th>
+            <th>@Html.DisplayNameFor(model => model.CorrectionPeriodDays)</th>
+            @if (user.IsInRole("Admin"))
+            {
+                <th>Действия</th>
+            }
+        </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.ViolationTypes)
-            {
-                <tr>
-                    <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                    <td>@Html.DisplayFor(modelItem => item.PenaltyAmount)</td>
-                    <td>@Html.DisplayFor(modelItem => item.CorrectionPeriodDays)</td>
-                    @if (user.IsInRole("Admin"))
-                    {
-                        <admin-actions item-id="@item.ViolationTypeId" id-name="ViolationTypeId"></admin-actions>
-                    }
-                </tr>
-            }
+        @foreach (var item in Model.ViolationTypes)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                <td>@Html.DisplayFor(modelItem => item.PenaltyAmount)</td>
+                <td>@Html.DisplayFor(modelItem => item.CorrectionPeriodDays)</td>
+                @if (user.IsInRole("Admin"))
+                {
+                    <admin-actions item-id="@item.ViolationTypeId" id-name="ViolationTypeId"></admin-actions>
+                }
+            </tr>
+        }
         </tbody>
     </table>
 
