--- a/InspectorJournal/Views/Home/Index.cshtml
+++ b/InspectorJournal/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         <!-- Таблица предприятий -->
         <div class="col-md-12 mb-4">
             <!-- Изменен на col-md-12 для растягивания на всю ширину -->
-            <table class="table table-bordered table-hover">
+            <table class="table table-striped table-bordered table-hover inspections-table">
                 <caption class="text-center">Предприятия</caption>
                 <thead class="table-dark">
                 <tr>
@@ -62,7 +62,7 @@
 
         <!-- Таблица нарушений -->
         <div class="col-md-6 mb-4">
-            <table class="table table-bordered table-hover">
+            <table class="table table-striped table-bordered table-hover inspections-table">
                 <caption class="text-center">Нарушения</caption>
                 <thead class="table-dark">
                 <tr>
@@ -87,7 +87,7 @@
 
     <!-- Таблица проверок -->
     <div class="col-md-12 mb-4">
-        <table class="table table-bordered table-hover">
+        <table class="table table-striped table-bordered table-hover inspections-table">
             <caption class="text-center">Проверки</caption>
             <thead class="table-dark">
             <tr>
