Разнёс по папкам viewmodels

--- a/InspectorJournal/Views/OffendingEnterprises/Index.cshtml
+++ b/InspectorJournal/Views/OffendingEnterprises/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model OffendingEnterprisesViewModel
+﻿
+@model OffendingEnterprisesViewModel
 
 @{
     ViewData["Title"] = "Предприятия нарушители";
