--- a/InspectorJournal/Views/_ViewImports.cshtml
+++ b/InspectorJournal/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using InspectorJournal.Models
 @using InspectorJournal.DataLayer.Models
 @using InspectorJournal.ViewModels
+@using InspectorJournal.ViewModels.AdditionalViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper "*, InspectorJournal"
